Fixed a scroll bar issue in overlap

--- a/frontend/public/style - fall.css
+++ b/frontend/public/style - fall.css
@@ -144,7 +144,7 @@ body {
   padding: 20px;
   flex: 1;
   overflow-y: auto;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   margin-right: 40px;
 }
   
